--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -7,7 +7,12 @@
   justify-content: space-around;
   background: white;
   align-items: center;
-  /* max-width: 25%; */
+  max-width: 25%;
   min-width: 25%;
   padding: 10px;
+}
+
+.ingrediants {
+  max-height: 150px;
+  overflow-y: auto;
 }
