--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
 }
 
+.title {
+  text-align: center;
+  padding: 25px;
+  margin: 0;
+}
+
 .search-form {
   min-height: 10vh;
   display: flex;
@@ -13,14 +19,18 @@
 .search-bar {
   width: 50%;
   border: none;
-  padding: 10px;
+  padding: 15px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .search-button {
   background: rgb(129, 169, 150);
   border: none;
-  padding: 10px 20px;
+  padding: 15px 20px;
   color: white;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
 .recipes {
